--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,5 +46,12 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "typeinfo": "cpp"
-    }
+    },
+    "makefile.launchConfigurations": [
+        {
+            "cwd": "/home/hagaycohen2/sp2/cpp_ex4",
+            "binaryPath": "/home/hagaycohen2/sp2/cpp_ex4/main",
+            "binaryArgs": []
+        }
+    ]
 }
